class-yaml/ingress/app-ingress-resource.yml
apiVersion: networking.k8s.io/v1	
kind: Ingress
metadata: 
   name: app-nginx-ingress-resources
spec:
   ingressClassName: nginx
   rules:
   - host: example.com       
     http:
         paths:
            - path: /home
              pathType: Prefix
              backend:
                service:
                   name: home-svc
                   port: 
                     number: 8080
            - path: /fe
              pathType: Prefix
              backend:
                service:
                   name: fe-svc
                   port: 
                     number: 8101	 
            - path: /db
              pathType: Prefix
              backend:
                service:
                   name: db-svc
                   port: 
                     number: 8102
